# Proyecto_maia

./: .gitignore  CHANGELOG.md  Dockerfile.app  Dockerfile.mlflow  Proyecto_maia  README.md  ar.py  docker-compose.yml
.dvc/: config
Model/: config.json  predict.py  requirements.txt  train.py
api/: avg_price_by_location.py  typing_requirements.txt
api/app/: api.py  config.py  (+1 more)
frontend/: VertebraAI.html  app.js  app.jsx  index.html  package.json  styles.css  vertebra-assets.jsx  vite.config.js
models/: train_gradient_boosting.py  train_model.py  train_random_forest.py  train_xgboost.py
models_test/: SVM_regression.ipynb  log_models.py  train_gb_gridsearch.py  train_rf_gridsearch.py  train_xgboost_features.py  train_xgboost_gridsearch.py
package-src/: MANIFEST.in  config.json  setup.py
services/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/app/: config.py  dependencies.py  main.py
services/app/api/v1/routers/: export.py  health.py  vertebrae.py
services/app/api/v1/schemas/: requests.py  responses.py
services/app/core/domain/entities/: analysis.py  vertebra.py
services/app/core/domain/ports/: model_port.py  storage_port.py
services/app/core/use_cases/: analyze_image.py  export_result.py
services/app/infrastructure/adapters/model/: segformer_adapter.py
services/app/infrastructure/adapters/storage/: in_memory_adapter.py
services/openapi/: vertebraAI.yml
services/tests/: conftest.py
services/tests/unit/: test_analyze_image_use_case.py  test_segformer_adapter.py  test_vertebrae_router.py
terraform/: s3.tf
(+138 files in other folders)
